--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ HINT: use .dblclick() instead of .click()</p>
 
 
 <hr>
+<h2>ADVANCED TRACK:</h2>
 
 
 <p>9. On click, change the page background to match these beautiful swatches.</p>
@@ -67,10 +68,8 @@ HINT: use .dblclick() instead of .click()</p>
   <div class="restore swatch"></div>
 </div>
 
-
 <hr>
 
-<h2>Bonus:</h2>
 <p>10. When your mouse is over the box, turn it red.<br>
 11. Add the class 'green' when clicked<br>
 12. Remove the class 'green' when clicked again.<br>
